--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,7 @@ name = "pypi"
 
 [packages]
 flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 
 [dev-packages]
-
-[requires]
-python_version = "3.11"
